deploy: f1a9e8335e67fc4f8e61f6398c666668ccdf1ccd

--- a/B-MIN-12/manifest.json
+++ b/B-MIN-12/manifest.json
@@ -1,6 +1,6 @@
 {
     "@context": "http://iiif.io/api/presentation/3/context.json",
-    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B/MIN/12/manifest.json",
+    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B-MIN-12/manifest.json",
     "type": "Manifest",
     "label": {
         "en": [
@@ -28,17 +28,17 @@
     "rights": "http://creativecommons.org/licenses/by-nc-nd/4.0/",
     "items": [
         {
-            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B/MIN/12/canvas/0",
+            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B-MIN-12/canvas/0",
             "type": "Canvas",
             "height": 2248,
             "width": 1914,
             "items": [
                 {
-                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B/MIN/12/page/0/0",
+                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B-MIN-12/page/0/0",
                     "type": "AnnotationPage",
                     "items": [
                         {
-                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B/MIN/12/painting/0",
+                            "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B-MIN-12/painting/0",
                             "type": "Annotation",
                             "motivation": "painting",
                             "body": {
@@ -141,7 +141,7 @@
                                     }
                                 ]
                             },
-                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B/MIN/12/canvas/0"
+                            "target": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B-MIN-12/canvas/0"
                         }
                     ]
                 }
@@ -154,7 +154,7 @@
             },
             "annotations": [
                 {
-                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B/MIN/12/page/0/0",
+                    "id": "https://miniatures-iiif.fitzmuseum.cam.ac.uk/B-MIN-12/page/0/0",
                     "type": "AnnotationPage",
                     "items": []
                 }
