--- a/FM 3882/manifest.json
+++ b/FM 3882/manifest.json
@@ -143,7 +143,7 @@
                             "motivation": "commenting",
                             "body": {
                                 "type": "TextualBody",
-                                "value": "<div><p>left collar and inscription</p><a href=https://unlocking-miniatures.fitz.ms/assets/fe2d6de4-e6fe-4d75-bf07-e95ef83cd93e?format=jpg target=\"__blank\">Open micrograph</a></div>",
+                                "value": "<div>\n                <p>left collar and inscription</p>\n                <a href=https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM%203882/micrograph/90/manifest.json alt=\"Open in Mirador\"><img src=\"https://unlocking-miniatures.fitz.ms/assets/fe2d6de4-e6fe-4d75-bf07-e95ef83cd93e?format=jpg&width=300&withoutEnlargement&quality=80\" alt=\"left collar and inscription\"/></a>\n                <a href=https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM%203882/micrograph/90/manifest.json target=\"__blank\">Open iiif Manifest URL</a>\n                <a href=https://unlocking-miniatures.fitz.ms/assets/fe2d6de4-e6fe-4d75-bf07-e95ef83cd93e?format=jpg&width=1920&withoutEnlargement&quality=80 target=\"__blank\">Download image</a>\n                </div>",
                                 "language": "en",
                                 "format": "text/html"
                             },
@@ -155,7 +155,7 @@
                             "motivation": "commenting",
                             "body": {
                                 "type": "TextualBody",
-                                "value": "<div><p>inscription on left</p><a href=https://unlocking-miniatures.fitz.ms/assets/2084cf43-dbb2-4ab5-8109-a95a4fd0f729?format=jpg target=\"__blank\">Open micrograph</a></div>",
+                                "value": "<div>\n                <p>inscription on left</p>\n                <a href=https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM%203882/micrograph/92/manifest.json alt=\"Open in Mirador\"><img src=\"https://unlocking-miniatures.fitz.ms/assets/2084cf43-dbb2-4ab5-8109-a95a4fd0f729?format=jpg&width=300&withoutEnlargement&quality=80\" alt=\"inscription on left\"/></a>\n                <a href=https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM%203882/micrograph/92/manifest.json target=\"__blank\">Open iiif Manifest URL</a>\n                <a href=https://unlocking-miniatures.fitz.ms/assets/2084cf43-dbb2-4ab5-8109-a95a4fd0f729?format=jpg&width=1920&withoutEnlargement&quality=80 target=\"__blank\">Download image</a>\n                </div>",
                                 "language": "en",
                                 "format": "text/html"
                             },
@@ -167,7 +167,7 @@
                             "motivation": "commenting",
                             "body": {
                                 "type": "TextualBody",
-                                "value": "<div><p>right side of lower face and inscription</p><a href=https://unlocking-miniatures.fitz.ms/assets/21604c17-672c-45c4-b2ff-b337ab33854a?format=jpg target=\"__blank\">Open micrograph</a></div>",
+                                "value": "<div>\n                <p>right side of lower face and inscription</p>\n                <a href=https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM%203882/micrograph/94/manifest.json alt=\"Open in Mirador\"><img src=\"https://unlocking-miniatures.fitz.ms/assets/21604c17-672c-45c4-b2ff-b337ab33854a?format=jpg&width=300&withoutEnlargement&quality=80\" alt=\"right side of lower face and inscription\"/></a>\n                <a href=https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM%203882/micrograph/94/manifest.json target=\"__blank\">Open iiif Manifest URL</a>\n                <a href=https://unlocking-miniatures.fitz.ms/assets/21604c17-672c-45c4-b2ff-b337ab33854a?format=jpg&width=1920&withoutEnlargement&quality=80 target=\"__blank\">Download image</a>\n                </div>",
                                 "language": "en",
                                 "format": "text/html"
                             },
@@ -179,7 +179,7 @@
                             "motivation": "commenting",
                             "body": {
                                 "type": "TextualBody",
-                                "value": "<div><p>right side of face and inscription</p><a href=https://unlocking-miniatures.fitz.ms/assets/1e8d3670-2b3e-41fa-b7d1-7bf4ccfd6bed?format=jpg target=\"__blank\">Open micrograph</a></div>",
+                                "value": "<div>\n                <p>right side of face and inscription</p>\n                <a href=https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM%203882/micrograph/112/manifest.json alt=\"Open in Mirador\"><img src=\"https://unlocking-miniatures.fitz.ms/assets/1e8d3670-2b3e-41fa-b7d1-7bf4ccfd6bed?format=jpg&width=300&withoutEnlargement&quality=80\" alt=\"right side of face and inscription\"/></a>\n                <a href=https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM%203882/micrograph/112/manifest.json target=\"__blank\">Open iiif Manifest URL</a>\n                <a href=https://unlocking-miniatures.fitz.ms/assets/1e8d3670-2b3e-41fa-b7d1-7bf4ccfd6bed?format=jpg&width=1920&withoutEnlargement&quality=80 target=\"__blank\">Download image</a>\n                </div>",
                                 "language": "en",
                                 "format": "text/html"
                             },
@@ -191,7 +191,7 @@
                             "motivation": "commenting",
                             "body": {
                                 "type": "TextualBody",
-                                "value": "<div><p>left ear, raking</p><a href=https://unlocking-miniatures.fitz.ms/assets/6cc119f4-6386-4ba0-b708-ae8a69cdad47?format=jpg target=\"__blank\">Open micrograph</a></div>",
+                                "value": "<div>\n                <p>left ear, raking</p>\n                <a href=https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM%203882/micrograph/117/manifest.json alt=\"Open in Mirador\"><img src=\"https://unlocking-miniatures.fitz.ms/assets/6cc119f4-6386-4ba0-b708-ae8a69cdad47?format=jpg&width=300&withoutEnlargement&quality=80\" alt=\"left ear, raking\"/></a>\n                <a href=https://miniatures-iiif.fitzmuseum.cam.ac.uk/FM%203882/micrograph/117/manifest.json target=\"__blank\">Open iiif Manifest URL</a>\n                <a href=https://unlocking-miniatures.fitz.ms/assets/6cc119f4-6386-4ba0-b708-ae8a69cdad47?format=jpg&width=1920&withoutEnlargement&quality=80 target=\"__blank\">Download image</a>\n                </div>",
                                 "language": "en",
                                 "format": "text/html"
                             },
