deploy: f1a9e8335e67fc4f8e61f6398c666668ccdf1ccd

--- a/FM 3868/micrograph/10/manifest.json
+++ b/FM 3868/micrograph/10/manifest.json
@@ -4,12 +4,12 @@
     "type": "Manifest",
     "label": {
         "en": [
-            "Unknown Lady - hair and headdress on left side, raking"
+            "Unknown Lady - hair and headdress on left side, raking light"
         ]
     },
     "summary": {
         "en": [
-            "hair and headdress on left side, raking"
+            "hair and headdress on left side, raking light"
         ]
     },
     "requiredStatement": {
@@ -51,7 +51,7 @@
                                         "width": 1920,
                                         "label": {
                                             "en": [
-                                                "hair and headdress on left side, raking"
+                                                "hair and headdress on left side, raking light"
                                             ]
                                         },
                                         "service": [
