--- a/FM 3869/micrograph/69/manifest.json
+++ b/FM 3869/micrograph/69/manifest.json
@@ -4,12 +4,12 @@
     "type": "Manifest",
     "label": {
         "en": [
-            "Ludovick Stuart, 2nd Duke of Lennox and Duke of Richmond 1574-1624 - top of head and background, raking"
+            "Ludovick Stuart, 2nd Duke of Lennox and Duke of Richmond 1574-1624 - top of head and background, raking light"
         ]
     },
     "summary": {
         "en": [
-            "top of head and background, raking"
+            "top of head and background, raking light"
         ]
     },
     "requiredStatement": {
@@ -51,7 +51,7 @@
                                         "width": 2560,
                                         "label": {
                                             "en": [
-                                                "top of head and background, raking"
+                                                "top of head and background, raking light"
                                             ]
                                         },
                                         "service": [
